Rebased services to be more consistent, corrected typo in wine_category directory