@@ -12,13 +12,13 @@ import java.util.*;
  */
 public class ChallengeService {
 
-    private ArrayList<String> varities = new ArrayList<>(Arrays.asList("merlot", "pinot gris", "chardonnay", "red blend", "rose"));
-    private ArrayList<String> years = new ArrayList<>(Arrays.asList("1989", "1990", "2000", "2010", "2005"));
-    private ArrayList<String> reds = new ArrayList<>(Arrays.asList("red", "red", "red", "red", "red"));
-    private ArrayList<String> whites = new ArrayList<>(Arrays.asList("whites", "whites", "whites", "whites", "whites"));
-    private ArrayList<String> rose = new ArrayList<>(Arrays.asList("rose", "rose", "rose", "rose", "rose"));
+    private final ArrayList<String> varieties = new ArrayList<>(Arrays.asList("merlot", "pinot gris", "chardonnay", "red blend", "rose"));
+    private final ArrayList<String> years = new ArrayList<>(Arrays.asList("1989", "1990", "2000", "2010", "2005"));
+    private final ArrayList<String> reds = new ArrayList<>(Arrays.asList("red", "red", "red", "red", "red"));
+    private final ArrayList<String> whites = new ArrayList<>(Arrays.asList("whites", "whites", "whites", "whites", "whites"));
+    private final ArrayList<String> rose = new ArrayList<>(Arrays.asList("rose", "rose", "rose", "rose", "rose"));
 
-    private final ChallengeDAO chalDao = new ChallengeDAO();
+    private final ChallengeDAO challengeDAO = new ChallengeDAO();
 
 
     /**
@@ -26,8 +26,8 @@ public class ChallengeService {
      */
     public void startChallengeVariety()
     {
-        ArrayList<Integer> wineids = getWinesforChallenge(varities, "tags");
-        chalDao.userActivatesChallenge(User.getCurrentUser().getId(), "Variety Challenge", wineids);
+        ArrayList<Integer> wineIDs = getWinesForChallenge(varieties, "tags");
+        challengeDAO.userActivatesChallenge(User.getCurrentUser().getId(), "Variety Challenge", wineIDs);
     }
 
     /**
@@ -35,17 +35,17 @@ public class ChallengeService {
      */
     public void startChallengeYears()
     {
-        ArrayList<Integer> wineids = getWinesforChallenge(years, "tags");
-        chalDao.userActivatesChallenge(User.getCurrentUser().getId(), "Time Travelling Challenge", wineids);
+        ArrayList<Integer> wineIDs = getWinesForChallenge(years, "tags");
+        challengeDAO.userActivatesChallenge(User.getCurrentUser().getId(), "Time Travelling Challenge", wineIDs);
     }
 
     /**
-     * calls the challengeDAO to make red challenge an active challege, sets the name.
+     * calls the challengeDAO to make red challenge an active challenge, sets the name.
      */
     public void startChallengeReds()
     {
-        ArrayList<Integer> wineids = getWinesforChallenge(reds, "name");
-        chalDao.userActivatesChallenge(User.getCurrentUser().getId(), "Red Roulette Challenge", wineids);
+        ArrayList<Integer> wineids = getWinesForChallenge(reds, "name");
+        challengeDAO.userActivatesChallenge(User.getCurrentUser().getId(), "Red Roulette Challenge", wineids);
     }
 
     /**
@@ -54,18 +54,18 @@ public class ChallengeService {
 
     public void startChallengeWhites()
     {
-        ArrayList<Integer> wineids = getWinesforChallenge(whites, "name");
-        chalDao.userActivatesChallenge(User.getCurrentUser().getId(), "Great White Challenge", wineids);
+        ArrayList<Integer> wineids = getWinesForChallenge(whites, "name");
+        challengeDAO.userActivatesChallenge(User.getCurrentUser().getId(), "Great White Challenge", wineids);
     }
 
     /**
-     * calls the challengeDAO to make rose challenge an active challege, sets the name.
+     * calls the challengeDAO to make rose challenge an active challenge, sets the name.
      */
 
     public void startChallengeRose()
     {
-        ArrayList<Integer> wineids = getWinesforChallenge(rose, "name");
-        chalDao.userActivatesChallenge(User.getCurrentUser().getId(), "Rose challenge", wineids);
+        ArrayList<Integer> wineIDs = getWinesForChallenge(rose, "name");
+        challengeDAO.userActivatesChallenge(User.getCurrentUser().getId(), "Rose challenge", wineIDs);
     }
 
     /**
@@ -74,34 +74,35 @@ public class ChallengeService {
      */
     public void challengeCompleted(String cname)
     {
-        chalDao.challengeCompleted(User.getCurrentUser().getId(), cname);
+        challengeDAO.challengeCompleted(User.getCurrentUser().getId(), cname);
     }
 
     /**
      * chose 5 random wines of the set type and returns there ids in an array list.
      * @param types is an array list of strings that are the type of wines for the challenge.
-     * @param searchtype is a string of either tags or name, which determines weather to user search service search in name or search in tags method.
+     * @param searchType is a string of either tags or name, which determines weather to user search service search in name or search in tags method.
      * @return ArrayList<Integer> list of wine ids </Integer>
      */
-    public ArrayList<Integer> getWinesforChallenge(ArrayList<String> types, String searchtype)
+    public ArrayList<Integer> getWinesForChallenge(ArrayList<String> types, String searchType)
     {
         ArrayList<Integer> wines = new ArrayList<>();
-        if (searchtype == "name") {
-            SearchWineService.getInstance().searchWinesByName(types.get(0), 100);
+        if (searchType.equals("name")) {
+            SearchWineService.getInstance().searchWinesByName(types.getFirst(), 100);
         }
-        for (int i = 0; i < types.size(); i ++) {
+        for (String type : types) {
             int wine = 0;
             boolean wineInvalid = true;
-            if (searchtype == "tags") {
-                SearchWineService.getInstance().searchWinesByTags(types.get(i), 100);
+            if (searchType.equals("tags")) {
+                SearchWineService.getInstance().searchWinesByTags(type, 100);
             }
             while (wineInvalid) {
                 Random random = new Random();
                 wine = SearchWineService.getInstance().getWineList().get(random.nextInt(SearchWineService.getInstance().getWineList().size())).getWineId();
                 boolean winefound = false;
-                for (int l = 0; l < wines.size(); l++) {
-                    if (wine == wines.get(l)) {
+                for (Integer integer : wines) {
+                    if (wine == integer) {
                         winefound = true;
+                        break;
                     }
                 }
                 if (!winefound) {
@@ -109,7 +110,7 @@ public class ChallengeService {
                 }
             }
             wines.add(wine);
-            }
+        }
         return wines;
     }
 
@@ -120,10 +121,7 @@ public class ChallengeService {
      * @return true if the user has the variety challenge.
      */
     public boolean activeChallenge() {
-        if (chalDao.getChallengeForUser(User.getCurrentUser().getId()) != null) {
-            return true;
-        }
-        return false;
+        return challengeDAO.getChallengeForUser(User.getCurrentUser().getId()) != null;
     }
 
     /**
@@ -131,7 +129,7 @@ public class ChallengeService {
      * @return arraylist of the wines for the challenge the user is participating in.
      */
     public ArrayList<Wine> challengeWines() {
-        return chalDao.getWinesInChallenge(chalDao.getChallengeForUser(User.getCurrentUser().getId()), User.getCurrentUser().getId());
+        return challengeDAO.getWinesInChallenge(challengeDAO.getChallengeForUser(User.getCurrentUser().getId()), User.getCurrentUser().getId());
     }
 
     /**
@@ -139,14 +137,6 @@ public class ChallengeService {
      * @return string name of users active challenge.
      */
     public String usersChallenge() {
-        return chalDao.getChallengeForUser(User.getCurrentUser().getId());
+        return challengeDAO.getChallengeForUser(User.getCurrentUser().getId());
     }
-
-
 }
-
-
-
-
-
-
